app/assets/stylesheets/recipes/show.scss
.recipe-header h1 {
  position: fixed;
  top: 5%;
  margin-left: 0%;
  font-size: 42px;
  width: 100%;
  background-color: white;
  z-index: 1;
}

.recipe-banner {
  background: url(https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRf148EuQqC90pqKVJvjraTejon1-A5OKkMuwsnBfxRDlWq1foe);
  opacity: 0.70;
  text-align: center;
  height: 250px;
  z-index: -1;
  top: 0px;
}

.recipe-permissions {
  text-align: center;
  padding-bottom: 10px;
}

.recipe-container {
  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
  flex-basis: 50%;
  margin-top: 10px;
}

.recipe-container h6 {
  margin-top: 0.05rem;
  margin-bottom: 1.2rem;
  text-align: center;
}

.recipe-container p {
  margin-bottom: 1.2rem;
}

.recipe-container .recipe-description {
  align-self: center;
  text-align: left;
  font: normal 12px/1.5 "Lucida Grande", arial, sans-serif;
  width: 50%;
  height: 20%;
  margin: 0 auto;
  padding: 6px 5px 4px 5px;
  position: relative;
  z-index: -1;
  color: #444;
  line-height: 20px;
  border: 1px solid #d2d2d2;
  background: #fff;
  background: -webkit-gradient(linear, 0 0, 0 100%, from(#d9eaf3), color-stop(4%, #fff)) 0 4px;
  background: -webkit-linear-gradient(top, #d9eaf3 0%, #fff 8%) 0 4px;
  background: -moz-linear-gradient(top, #d9eaf3 0%, #fff 8%) 0 4px;
  background: -ms-linear-gradient(top, #d9eaf3 0%, #fff 8%) 0 4px;
  background: -o-linear-gradient(top, #d9eaf3 0%, #fff 8%) 0 4px;
  background: linear-gradient(top, #d9eaf3 0%, #fff 8%) 0 4px;
  -webkit-background-size: 100% 20px;
  -moz-background-size: 100% 20px;
  -ms-background-size: 100% 20px;
  -o-background-size: 100% 20px;
  background-size: 100% 20px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.07);
  -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.07);
  box-shadow: 0 1px 2px rgba(0,0,0,0.07);
  width: 400px;
  height: 200px;
  z-index: -1;
}

.data-directory {
  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
  font-weight: 200;
}
.form-container {
  // margin-left: 5%;
}
.ingredient-form {
  // margin-top: 10%;
}
.submit {
  padding-top: 5px;
}

.recipe-content {
  background-color: #DBECEF;
  font-style: normal;
  display: flex;
  align-items: center;
  width: 900px;
  justify-content: space-around;
  padding: 0;
  margin: 0 auto;
  list-style: none;
  margin-bottom: 0%;
}

.recipe-ingredients {
  display: inline-block;
  margin: 12px;
  margin-top: 0px;
  float: left;
  width: 60%;
  height: auto;
  text-align: justify;
  color: black;
  align-items: center;
  list-style: none;
}

.recipe-ingredients ul {
  font-size: 18px;
  font-weight: 200;
  list-style: none;
  padding-top: 10px;
  padding-bottom: 10px;
  background-color: #D9D9D9;
  padding-left: 10%;
  // margin-bottom: 20%;
  margin-left: 0px;
  // margin-right: 40px;
  text-align: justify;
}

.recipe-ingredients p {
  // padding-left: 50%;
  font-size: 45px;
  line-height: 32px;
  font-weight: 100;
  margin-bottom: 0px;
}

.recipe-ingredients li {
  padding: 0px;
  line-height: 20px;
}

.recipe-ingredients a {
  font-size: 30px;
}

.recipe-instructions {
  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
  // margin-left: 45%;
  height: auto;
  margin: 12px;
  padding-top: 42px;
  // width: 25%;
}

.recipe-instructions p {
  padding-left: 70%;
  font-size: 45px;
  line-height: 32px;
  font-weight: 100;
  margin-bottom: 0px;
}

.recipe-instructions li {
  list-style: none;
  background-color: white;
  opacity: 0.80;
  margin-bottom: 10px;
}

